--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: My Latest Post
-description: Deni Setiawan Personal Blog Powered By Jekyll
+description: Deni Setiawan Personal Blog Powered By Jekyll and GitHub
 author: Deni Setiawan
 github: https://github.com/zerosite
 about: I am freelance developer and love coffe. Currently doing more in backend, focused in PHP.
