--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ about: I am freelance developer and love coffe. Currently doing more in backend,
 disqus_shortname: zerosite
 google_analytics: UA-39154729-14
 avatar_url: /static/img/avatar.jpg
-post_image_url: /static/img/avatar.jpg
+postimg_url: /static/img/avatar.jpg
 
 permalink: /:title.html
 
