--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: My Latest Post
+title: Zerosite
 description: Deni Setiawan Personal Blog Powered By Jekyll and GitHub
 author: Deni Setiawan
 github: https://github.com/zerosite
