--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
-title: Zerosite
+title: Deni's Blog
 description: Deni Setiawan Personal Blog Powered By Jekyll and GitHub
 author: Deni Setiawan
-github: https://github.com/zerosite
-about: I am freelance developer and love coffe. Currently doing more in backend, focused in PHP.
+github: https://github.com/HeyDSN
+about: Experienced Web Developer, Currently Focusing In Node.js. Skilled in Linux System Administration, Technical Support, and Back End Web Development.
 disqus_shortname: zerosite
 google_analytics: UA-39154729-14
 avatar_url: /static/img/avatar.jpg
@@ -13,30 +13,28 @@ enableTags: true
 tagarray: []
 
 social:
+    - icon: fa-envelope
+      link: "mailto:hey@deni-setiawan.me"
     - icon: fa-github
-      link: "https://github.com/zerosite"
+      link: "https://github.com/HeyDSN"
     - icon: fa-facebook
-      link: "#"
+      link: "https://fb.me/HeyDSN"
     - icon: fa-twitter
-      link: "https://twitter.com/dsniwa"
-    - icon: fa-google-plus
-      link: "https://plus.google.com/+DeniSetiawanDS"
+      link: "https://twitter.com/HeyDeniSetiawan"
     - icon: fa-instagram
-      link: "https://instagram.com/dsniwa"
+      link: "https://www.instagram.com/heydenisetiawan/"
     - icon: fa-linkedin
-      link: "#"
-    - icon: fa-stack-exchange
-      link: "#"
+      link: "https://www.linkedin.com/in/heydsn/"
     - icon: fa-rss
       link: "/feed.xml"
 
 share:
-  twitter_username: dsniwa
+  twitter_username: HeyDeniSetiawan
   fb_appid: 352113115188304
 
 urls:
-    - text: About Me
-      url: /about/
+    #- text: About Me
+    #  url: /about/
     - text: Posts Category
       url: /category/
     #- text: XML Feed
@@ -44,10 +42,10 @@ urls:
     #- text: Sitemap
     #  url: /sitemap.xml
 
-url: "https://zerosite.github.io"
+url: "https://deni-setiawan.me"
 baseurl: ""
-paginate: 16
-per_page: 16
+paginate: 3
+per_page: 1
 paginate_path: "/page/:num/"
 markdown: kramdown
 plugins:
